@@ -1,3 +1,9 @@
+2011-11-28  Richard Henderson  <rth@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_expand_atomic_compare_and_swap):
+	Handle overlap between retval and oldval.  Always compute boolval
+	from CR0 EQ value.
+
 2011-11-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/50317
